security: apply security fixes and audit recommendations